# perf-and-dhat-profiling-example

./: .gitignore  Cargo.toml  FROM_HERE.md  NICE_TO_KNOW.md  README  READ_ME.md  perf.data  perf.data.old
src/: main.rs
