[package]
name = "perf-and-dhat-profiling-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dhat = "0.3.2"

[profile.release]
incremental = true
debug = true
# lto = "fat"
# codegen-units = 1
# RUSTFLAGS="-C target-cpu=native"

[features]
default = []
dhat-on = []

